penambahan tampilan kehadiran

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -129,7 +129,7 @@
                    <!-- <li value="karyawan" onClick="changeIframe(this)"><a>Karyawan</a></li> -->
                         <li><a href="goToKaryawan" target="iframe">Data Karyawan</a></li>
                         <li><a href="hariKerja" target="iframe">Hari Kerja</a></li>
-                        <li><a href="main.jsp?iframe=masterArea">Kehadiran</a></li>
+                        <li><a href="kehadiran" target="iframe">Kehadiran</a></li>
                     </ul>                    
                 </li>  
                         <li class="dropdown">
