Perbaikan Tampilan Kehadiran

--- a/src/main/resources/templates/kehadiran.html
+++ b/src/main/resources/templates/kehadiran.html
@@ -1,8 +1,88 @@
 <!DOCTYPE html>
 <html>
+    <style>
+    .vertical-align-center {
+    /* To center vertically */
+    
+    vertical-align: middle;
+    }
+    .modal-content2 {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    height:inherit;
+    }
+    
+                .modal {
+            text-align: center;
+            padding: 0!important;
+            }
+
+            .modal:before {
+            content: '';
+            display: inline-block;
+            height: 100%;
+            vertical-align: middle;
+            margin-right: -4px;
+            }
+
+            .modal-dialog {
+            display: inline-block;
+            text-align: left;
+            vertical-align: middle;
+            }
+            
+             article, aside, figure, footer, header, hgroup, 
+            menu, nav, section { display: block; }
+    </style>
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+
+    <!-- Bootstrap Core CSS -->
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- MetisMenu CSS -->
+        <link href="bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
+
+        <!-- DataTables CSS -->
+        <link href="bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
+
+        <!-- DataTables Responsive CSS -->
+        <link href="bower_components/datatables-responsive/css/dataTables.responsive.css" rel="stylesheet">
+
+        <!-- Custom CSS -->
+        <link href="dist/css/sb-admin-2.css" rel="stylesheet">
+
+        <!-- Custom Fonts -->
+        <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        
+        <!-- Datepicker for date -->
+        <link rel="stylesheet" href="css/jquery-ui.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!-- jQuery -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/jquery/dist/jquery-image-blob.min.js"></script>
+        
+        <!-- Datepicker for Date -->
+        <script src="js/jquery-ui.js"></script>
+        
+        <!-- Bootstrap Core JavaScript -->
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+        <!-- Metis Menu Plugin JavaScript -->
+        <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
+
+        <!-- DataTables JavaScript -->
+        <script src="bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+        <script src="bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>
+        
+        <!-- Custom Theme JavaScript -->
+        <script src="dist/js/sb-admin-2.js"></script>
 </head>
 <body>
      <div id="divAlert"></div>
@@ -17,8 +97,7 @@
                 <div class="col-lg-12">
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs">                                
-                        <li class="<% out.print(Integer.parseInt(strActiveTab) == 1 || Integer.parseInt(strActiveTab) == 0 ? "active" : ""); %>"><a href="#master" data-toggle="tab">Master Kehadiran</a></li>
-                       
+                        <li><a href="#master" data-toggle="tab">Master Kehadiran</a></li>                       
                     </ul>
                     
                     <!-- Tab panes -->
