--- a/src/main/resources/templates/kehadiran.html
+++ b/src/main/resources/templates/kehadiran.html
@@ -117,27 +117,51 @@
                                                         <td>Bulan</td>
                                                         <td>
                                                             <select id="bulansrc" name="bulansrc" class="form-control form-control-sm" onchange="functIsiHari(this.value)">
-                                                                <option value=""></option>
-                                                                   
-                                                                  
+                                                                <option value="01">Januari</option>
+                                                                <option value="02">Februari</option>   
                                                             </select>
                                                         </td>
                                                          <td>Tahun</td>
                                                          <td><select id="tahunsrc" name="tahunsrc" class="form-control form-control-sm">
-                                                                <option value="">tahun</option>
-                                                               
+                                                                <option value="">2022</option>
                                                             </select>
                                                         </td>
-                                                        
-                                                        
                                                     </tr>
                                                     <tr>
                                                         <td>Tanggal</td>
                                                         <td>
                                                             <select id="tglsrc" name="tglsrc" class="form-control form-control-sm">
-                                                                <option value=""></option>
-                                                                   
-                                                                  
+                                                                <option value="01">1</option>
+                                                                <option value="02">2</option>
+                                                                <option value="03">3</option>
+                                                                <option value="04">4</option>
+                                                                <option value="05">5</option>
+                                                                <option value="06">6</option>
+                                                                <option value="07">7</option>
+                                                                <option value="08">8</option>
+                                                                <option value="09">9</option>
+                                                                <option value="10">10</option>
+                                                                <option value="11">11</option>
+                                                                <option value="12">12</option>
+                                                                <option value="13">13</option>
+                                                                <option value="14">14</option>
+                                                                <option value="15">15</option>
+                                                                <option value="16">16</option>
+                                                                <option value="17">17</option>
+                                                                <option value="18">18</option>
+                                                                <option value="19">19</option>
+                                                                <option value="20">20</option>
+                                                                <option value="21">21</option>
+                                                                <option value="22">22</option>
+                                                                <option value="23">23</option>
+                                                                <option value="24">24</option>
+                                                                <option value="25">25</option>
+                                                                <option value="26">26</option>
+                                                                <option value="27">27</option>
+                                                                <option value="28">28</option>
+                                                                <option value="29">29</option>
+                                                                <option value="30">30</option>
+                                                                <option value="31">31</option>
                                                             </select>
                                                         </td>
                                                         </tr>
@@ -152,17 +176,16 @@
                                         <div class="table-responsive">
                                         <table class="table">
                                             <tbody>
-                                            <tr>  
-                                            <td align = "left">
-                                            <button id="btnSearch" type="button" class="btn btn-info" onclick="functSearchHari();"><i class="fa fa-search fa-fw"></i>Search</button>
-                                            <button id="btnNew" type="button" class="btn btn-success" data-toggle="modal" data-target="#myModalEdit" onclick="functClearHariKerja();" ><i class="fa fa-file-o fa-fw"></i> Hari Kerja Baru</button>
-                                            <button id="btnBulkUpdate" type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModalEditBulk" ><i class="fa fa-file-o fa-fw"></i> Set Bulk Tanggal Merah</button>
-                                             <button id="btnBulkUpdateJam" type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModalEditBulkJam" ><i class="fa fa-file-o fa-fw"></i> Set Bulk Jam Kerja</button>
-                                            </td>
-                                          </tr>
-    
-                                            
-                                          
+                                                <tr>  
+                                                  <td align = "left">
+                                                     <form action="uploadFile" method = "post" enctype = "multipart/form-data">
+                                                         <button id="btnSearch" type="button" class="btn btn-info" onclick="functSearchHari();"><i class="fa fa-search fa-fw"></i>Search</button>
+                                                         <button id="btnNew" type="button" class="btn btn-success"><i class="fa fa-file-o fa-fw"></i>Upload Absensi</button>
+                                                         <input type="file" id="fileAbsensi" name="fileAbsensi" style="display:none" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
+                                                         <button type="submit" class="btn btn-success">Submit</button>    
+                                                     </form>                                              
+                                                 </td>
+                                               </tr>
                                             </tbody>  
                                         </table>
                                         </div>
@@ -186,7 +209,7 @@
                                 
                                 
                                 
-                                <div id="divTableHari" class="dataTable_wrapper" style="display: none">
+                                <div id="divTableHari" class="dataTable_wrapper">
                                     <table class="table table-striped table-bordered table-hover" id="dataTables-profile" data-sort="false" data-page-length="-1" style="font-size: 13px;">
                                         <thead>                                                
                                             <tr>
@@ -503,10 +526,13 @@
             color: skyblue;
         }
     </style>
-    
-    <script>
-         
-        </script>
+<script>
+$(document).ready(function(){
+	$("#btnNew").click(function(){
+		$("#fileAbsensi").click();
+	})
+})         
+</script>
 
 </body>
 </html>
