--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -128,7 +128,7 @@
                     <ul class="dropdown-menu">
                    <!-- <li value="karyawan" onClick="changeIframe(this)"><a>Karyawan</a></li> -->
                         <li><a href="goToKaryawan" target="iframe">Data Karyawan</a></li>
-                        <li><a href="hariKerja" target="iframe">Hari Kerja</a></li>
+                        <li><a href="hariKerja?hariKerja=test" target="iframe" value="hariKerja" name="hariKerja" id="hariKerja">Hari Kerja</a></li>
                         <li><a href="kehadiran" target="iframe">Kehadiran</a></li>
                     </ul>                    
                 </li>  
