perbaikan tampilan edit modal

--- a/src/main/resources/templates/hariKerja.html
+++ b/src/main/resources/templates/hariKerja.html
@@ -112,6 +112,7 @@
         	document.getElementById("chkmerah").checked=true;
         	document.getElementById("kolomket").style.display="block";
         	document.getElementById("kolomket").defaultValue=keterangan;
+        	document.getElementById("kolomJamKerja").style.display="none";
         }
         else if(merahBukan ==null){
         	document.getElementById("chkmerah").checked=false;
